// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`api > returns appropriate content for health 1`] = `
{
  "status": "ok",
}
`;

exports[`api > returns appropriate content for something-that-is-random 1`] = `
{
  "error": "Not Found",
  "status": 404,
}
`;

exports[`api > returns appropriate content for version 1`] = `
{
  "version": "0.1.0",
}
`;

exports[`auth > can run through the whole sign up, login and refresh flow 1`] = `
{
  "accessToken": "swa:81c12df9c210f34b1d145f20f4e3ce86d512d5d9c6abae6ec32ca159f6c2707b:11111111111111111111111111111111",
  "accessTokenExpiry": 1746403200000,
  "clientId": "test-client-id",
  "refreshToken": "swr:81c12df9c210f34b1d145f20f4e3ce86d512d5d9c6abae6ec32ca159f6c2707b:22222222222222222222222222222222",
  "refreshTokenExpiry": 1748908800000,
}
`;

exports[`auth > can run through the whole sign up, login and refresh flow 2`] = `
{
  "accessToken": "swa:81c12df9c210f34b1d145f20f4e3ce86d512d5d9c6abae6ec32ca159f6c2707b:33333333333333333333333333333333",
  "accessTokenExpiry": 1746403200000,
  "clientId": "test-client-id",
  "refreshToken": "swr:81c12df9c210f34b1d145f20f4e3ce86d512d5d9c6abae6ec32ca159f6c2707b:44444444444444444444444444444444",
  "refreshTokenExpiry": 1748908800000,
}
`;

exports[`auth > can run through the whole sign up, login and refresh flow 3`] = `
{
  "error": "Durable Object ID is not valid for this namespace.",
  "status": 500,
}
`;

exports[`auth > can run through the whole sign up, login and refresh flow 4`] = `
{
  "error": "Durable Object ID is not valid for this namespace.",
  "status": 500,
}
`;
